<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar_app"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_card"
        android:gravity="center"
        android:layout_below="@+id/app_bar"
        android:orientation="vertical"
        android:padding="20dp"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/iv"
        android:textStyle="bold"
        android:text="@string/card_number"
        />
    <com.foodpanda.paymentcard.creditcard.CreditCardAppCompactEditText
        android:id="@+id/textview_credit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:background="@drawable/rounded_corner_button"
        android:hint="@string/place_holder"

        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/cvv_exp"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/credit_card_expire_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight=".5"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/mm_yy"
            android:inputType="number"
            android:background="@drawable/rounded_corner_button"
            android:maxLength="4"
            android:maxLines="1"
            />



        <EditText
            android:id="@+id/credit_card_cvv_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_button"
            android:layout_weight="1.5"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:hint="@string/cvv"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1" />
    </LinearLayout>





        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_button"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:maxLength="3"
            android:maxLines="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv"
        android:padding="20dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/ll_card"

        >
        <TextView
            android:id="@+id/save_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/save_card"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="190dp"
            android:text=""
            android:layout_below="@+id/c_num"/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_payment"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/button"
        android:layout_below="@+id/lv"/>
</RelativeLayout>