<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment">
    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar_app"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_card"
        android:gravity="center"
        android:layout_below="@+id/app_bar"
        android:orientation="vertical"
        android:padding="20dp"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="45dp"
        android:id="@+id/iv"
        android:textStyle="bold"
        android:text="@string/card_number"
        />
    <EditText
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:hint="@string/place_holder"
        android:background="@drawable/rounded_corner_button"
        android:id="@+id/et_num"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="45dp"
            android:id="@+id/exp_date"
            android:textStyle="bold"
            android:text="@string/expiration_date"
            />
        <EditText
            android:id="@+id/credit_card_expire_et"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mm_yy"
            android:inputType="number"
            android:background="@drawable/rounded_corner_button"
            android:maxLength="5"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="45dp"
            android:id="@+id/cvv"
            android:textStyle="bold"
            android:text="@string/cvv"
            />
        <EditText
            android:id="@+id/credit_card_cvv_et"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_button"
            android:layout_weight="1"
            android:hint="@string/cvv"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="45dp"
            android:textStyle="bold"
            android:text="Name"></TextView>


        <EditText
            android:id="@+id/lastname"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_button"
            android:hint="Last name "
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv"
        android:padding="20dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/ll_card"

       >
    <TextView
        android:id="@+id/save_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/save_card"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="190dp"
        android:text=""
        android:layout_below="@+id/c_num"/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_payment"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/button"
        android:layout_below="@+id/lv"/>
</RelativeLayout>